# e-XSpice

./: .gitignore  CMakeLists.txt  README.md
examples/: divider.cir  multiloop.cir  rc_step.cir  rlc_series.cir
src/: main.cpp
src/analysis/: DCAnalysis.cpp  DCAnalysis.h  TransientAnalysis.cpp  TransientAnalysis.h
src/core/: Circuit.cpp  Circuit.h  Device.cpp  Device.h  NetlistParser.cpp  NetlistParser.h  Node.cpp  Node.h
src/devices/: Capacitor.cpp  Capacitor.h  CurrentSource.cpp  CurrentSource.h  Inductor.cpp  Inductor.h  Resistor.cpp  Resistor.h  VoltageSource.cpp  VoltageSource.h
src/parallel/: MPIManager.cpp  MPIManager.h
src/solver/: LinearSolver.cpp  LinearSolver.h  SparseMatrix.cpp  SparseMatrix.h
tests/: CMakeLists.txt  test_divider.cpp  test_multiloop.cpp  test_rc_step.cpp  test_rlc_series.cpp
